@@ -7,9 +7,17 @@ package com.top_logic.monitoring.log;
 
 import static java.util.stream.Collectors.*;
 
+import java.io.BufferedReader;
+import java.io.FileInputStream;
 import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.io.Reader;
 import java.io.UncheckedIOException;
+import java.nio.charset.CharacterCodingException;
 import java.nio.charset.Charset;
+import java.nio.charset.CharsetDecoder;
+import java.nio.charset.CodingErrorAction;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.FileVisitOption;
 import java.nio.file.Files;
@@ -33,6 +41,7 @@ import com.top_logic.basic.config.constraint.annotation.Constraint;
 import com.top_logic.basic.config.constraint.impl.NonNegative;
 import com.top_logic.basic.config.format.CharsetFormat;
 import com.top_logic.basic.config.format.RegExpValueProvider;
+import com.top_logic.basic.io.FileUtilities;
 import com.top_logic.basic.util.ResKey;
 import com.top_logic.event.infoservice.InfoService;
 
@@ -47,6 +56,21 @@ import com.top_logic.event.infoservice.InfoService;
  * @author <a href=mailto:jst@top-logic.com>Jan Stolzenburg</a>
  */
 public class LogFileCollector extends AbstractConfiguredInstance<LogFileCollector.Config> {
+
+	/**
+	 * This {@link Charset} is used when reading a log file fails due to a
+	 * {@link CharacterCodingException}.
+	 */
+	private static final Charset FALLBACK_LOG_FILE_CHARSET = StandardCharsets.UTF_8;
+
+	/**
+	 * The Unicode "Replacement Character" for undecodable bytes.
+	 * <p>
+	 * <a href="https://en.wikipedia.org/wiki/Specials_(Unicode_block)#Replacement_character">
+	 * Wikipedia: Replacement character</a>
+	 * </p>
+	 */
+	private static final String REPLACEMENT_CHARACTER = "\uFFFD";
 
 	/** {@link ConfigurationItem} for the {@link LogFileCollector}. */
 	public interface Config extends PolymorphicConfiguration<LogFileCollector> {
@@ -134,14 +158,64 @@ public class LogFileCollector extends AbstractConfiguredInstance<LogFileCollecto
 	private LogFile readFile(Path file) {
 		String fileName = file.getFileName().toString();
 		try {
-			String content = Files.readString(file, getEncoding());
+			String content = readFileToString(file);
 			return createLogFile(fileName, content);
 		} catch (IOException exception) {
-			ResKey uiMessage = I18NConstants.FAILED_TO_READ_FILE__NAME;
-			String logMessage = "Failed to read a log file: " + fileName;
-			InfoService.logError(uiMessage, logMessage, exception, LogParser.class);
+			logErrorFileReadingFailed(fileName, exception);
 			return new LogFile(fileName, "");
 		}
+	}
+
+	private void logErrorFileReadingFailed(String fileName, IOException exception) {
+		ResKey uiMessage = I18NConstants.FAILED_TO_READ_FILE__NAME;
+		String logMessage = "Failed to read a log file: " + fileName;
+		InfoService.logError(uiMessage, logMessage, exception, LogParser.class);
+	}
+
+	private String readFileToString(Path file) throws IOException {
+		try {
+			return Files.readString(file, getEncoding());
+		} catch (CharacterCodingException exception) {
+			String fileName = file.getFileName().toString();
+			logErrorCodingException(fileName, exception);
+			return readFileWithBrokenCharacters(file);
+		}
+	}
+
+	private void logErrorCodingException(String fileName, CharacterCodingException exception) {
+		ResKey uiMessage = I18NConstants.FILE_IN_WRONG_ENCODING__NAME_ENCODING.fill(fileName, getEncoding());
+		String logMessage = "Failed to read a log file, as it is not in encoding '" + getEncoding()
+			+ "'. The actual encoding is unknown. File: " + fileName;
+		InfoService.logError(uiMessage, logMessage, exception, LogParser.class);
+	}
+
+	/**
+	 * Tries to read the given file, which could not be read in a first attempt.
+	 * <p>
+	 * The first attempt used {@link #getEncoding()} but failed with an
+	 * {@link CharacterCodingException}.
+	 * </p>
+	 */
+	protected String readFileWithBrokenCharacters(Path path) throws IOException {
+		CharsetDecoder charsetDecoder = createErrorTolerantDecoder(FALLBACK_LOG_FILE_CHARSET);
+		try (InputStream inputStream = new FileInputStream(path.toFile());
+				Reader reader = new InputStreamReader(inputStream, charsetDecoder);
+				BufferedReader bufferedReader = new BufferedReader(reader)) {
+			return readToString(bufferedReader);
+		}
+	}
+
+	private CharsetDecoder createErrorTolerantDecoder(Charset charset) {
+		return charset.newDecoder()
+			.onMalformedInput(CodingErrorAction.REPLACE)
+			.onUnmappableCharacter(CodingErrorAction.REPLACE)
+			.replaceWith(REPLACEMENT_CHARACTER);
+	}
+
+	private String readToString(BufferedReader reader) throws IOException {
+		StringBuilder stringBuilder = new StringBuilder();
+		FileUtilities.readAllLinesFromReader(reader, stringBuilder);
+		return stringBuilder.toString();
 	}
 
 	/**
